src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --header-bg: white;
  --header-text: black;
  --primary-color: #6495ed;
}

body {
  margin: 0;
  overflow: hidden;
}

html {
  scroll-behavior: none;
  /* Hide scrollbar */
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/* Hide scrollbar */
html::-webkit-scrollbar {
  display: none;
}

@layer base {
  .heading-base {
    @apply font-display font-bold mb-4 text-left md:text-center uppercase;
  }
  .h0 {
    @apply heading-base tracking-tight text-5xl md:text-8xl;
  }
  .h1 {
    @apply heading-base tracking-normal text-3xl md:text-6xl;
  }
  .h2 {
    @apply heading-base tracking-wide text-3xl md:text-5xl;
  }
  .h3 {
    @apply heading-base tracking-wider text-2xl md:text-4xl;
  }
  h1 {
    @apply h1;
  }
  h2 {
    @apply h2;
  }
  h3 {
    @apply h3;
  }
}

@layer components {
  .button {
    @apply bg-primary text-black border border-primary rounded-lg box-border cursor-pointer uppercase text-sm leading-7 px-12 py-3 w-fit font-bold active:outline-none hover:outline-none hover:brightness-125 transition-all;
  }
}

